--- a/docker/dev/nginx/app.conf
+++ b/docker/dev/nginx/app.conf
@@ -2,7 +2,7 @@ server {
     listen 81;
     server_name slim-project-skeleton.test www.slim-project-skeleton.test;
     index index.php index.html;
-    root /app/slim-project-skeleton/public;
+    root /app/public;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
